[project]
name = "e2e-tracing"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=4.3.0",
    "hf-xet>=1.1.10",
    "huggingface-hub>=0.35.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "transformers>=4.56.2",
    "torch==2.7.1",
]